fix: header z-index

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -65,7 +65,7 @@
         .header--menu--backdrop {
           top: 0;
           left: 0;
-          z-index: 10;
+          z-index: 90;
           width: 100%;
           height: 100%;
           opacity: 0.5;
@@ -76,7 +76,7 @@
         menu {
           top: 0;
           left: 0;
-          z-index: 11;
+          z-index: 91;
           width: 100%;
           position: fixed;
           background: $white;
